--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -337,7 +337,7 @@
     <entry name="Necrons/UpgradeGaussFlayerArray"
            value="Upgrade Gauss Flayer Array"/>
     <entry name="Necrons/UpgradeGaussFlayerArrayDescription"
-           value="Increases the ranged attacks of Ghost Ark, but removes ability to transport cargo. additional.<br/><br/><string name='Actions/UpgradeDisclaimer'/>"/>
+           value="Increases the ranged attacks of Ghost Ark, but removes ability to heal infantry units and reduces movement max.<br/><br/><string name='Actions/UpgradeDisclaimer'/>"/>
     <entry name="Necrons/Wraithflight"
            value="Wraithflight"/>
     <entry name="Necrons/WraithflightDescription"
