Tau tree part 1

--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -480,6 +480,18 @@
     <entry name="SpaceMarines/SmokeLauncherDescription"
            value="Grants ground vehicles the ability to launch a smoke screen that increases the ranged damage reduction. Reduces the movement penalty for tanks in forests and imperial ruins."/>
 
+    <entry name="Tau/AdvancedScanners"
+           value="Advanced Scanners"/>
+    <entry name="Tau/AdvancedScannersDescription"
+           value="TODO"/>
+    <entry name="Tau/AdvancedScannersFlavor"
+           value="TODO"/>
+    <entry name="Tau/BlacksunDefenceSystem"
+           value="Blacksun Defence System"/>
+    <entry name="Tau/BlacksunDefenceSystemDescription"
+           value="TODO"/>
+    <entry name="Tau/BlacksunDefenceSystemFlavor"
+           value="TODO"/>
     <entry name="Tau/BondingKnifeRitualDescription"
            value="Grants Stealth Battlesuits, Broadside Battlesuits, Ghostkeel Battlesuits and Riptide Battlesuits the ability to restore their morale."/>
     <entry name="Tau/CadreFireblade"
@@ -492,18 +504,78 @@
            value="Increases the tile acquisition radius."/>
     <entry name="Tau/CityTier3Description"
            value="Increases the tile acquisition radius."/>
+    <entry name="Tau/ConclaveScreen"
+           value="Conclave Screen"/>
+    <entry name="Tau/ConclaveScreenDescription"
+           value="TODO"/>
+    <entry name="Tau/ConclaveScreenFlavor"
+           value="TODO"/>
     <entry name="Tau/DroneControllerDescription"
            value="Battlesuit support system that increases the accuracy of adjacent drones. Halves cooldown of drone deployment across most Tau units. Grants Cadre's Gun Drone additional Twin-Linked Pulse Carbine."/>
+    <entry name="Tau/EmergencyShields"
+           value="Emergency Shields"/>
+    <entry name="Tau/EmergencyShieldsDescription"
+           value="TODO"/>
+    <entry name="Tau/EmergencyShieldsFlavor"
+           value="TODO"/>
+    <entry name="Tau/ForceField"
+           value="Force Field"/>
+    <entry name="Tau/ForceFieldDescription"
+           value="TODO"/>
+    <entry name="Tau/ForceFieldFlavor"
+           value="TODO"/>
+    <entry name="Tau/FriendsToAll"
+           value="Friends to All"/>
+    <entry name="Tau/FriendsToAllDescription"
+           value="TODO"/>
+    <entry name="Tau/FriendsToAllFlavor"
+           value="TODO"/>
+    <entry name="Tau/GhostkeelDojo"
+           value="Ghostkeel Dojo"/>
+    <entry name="Tau/GhostkeelDojoDescription"
+           value="TODO"/>
+    <entry name="Tau/GhostkeelDojoFlavor"
+           value="TODO"/>
     <entry name="Tau/GunDroneDescription"
            value="Grants Piranha, Devilfish, Stealth Battlesuits, Broadside Battlesuits, Cadre Fireblade, Ethereal and Commander the ability to deploy temporary basic combat drones."/>
     <entry name="Tau/GunDroneDescription"
            value="Grants heroes, Devilfishes, Piranhas, Broadside Battlesuits and Stealth Battlesuits the ability to deploy temporary basic combat drones."/>
     <entry name="Tau/HammerOfWrathDescription"
            value="Grants Ghostkeel Battlesuits, Riptide Battlesuits and Stormsurges the ability to perform more devastating attacks."/>
+    <entry name="Tau/Markerlight"
+           value="Markerlight"/>
+    <entry name="Tau/MarkerlightDescription"
+           value="TODO"/>
+    <entry name="Tau/MarkerlightFlavor"
+           value="TODO"/>
+    <entry name="Tau/MobileMissilePod"
+           value="Mobile Missile Pod"/>
+    <entry name="Tau/MobileMissilePodDescription"
+           value="TODO"/>
+    <entry name="Tau/MobileMissilePodFlavor"
+           value="TODO"/>
     <entry name="Tau/SeekerMissileDescription"
            value="Grants vehicles and Broadside Battlesuits a missile weapon."/>
     <entry name="Tau/ShieldDroneDescription"
            value="Grants Crisis Battlesuits, Stealth Battlesuits, Broadside Battlesuits, Ghostkeel Battlesuits, Cadre Fireblade, Ethereal and Commander the ability to deploy temporary drones that shield allies. Grants Cadre's Gun Drone the same ability."/>
+    <entry name="Tau/TotalAssimilation"
+           value="Total Assimilation"/>
+    <entry name="Tau/TotalAssimilationDescription"
+           value="TODO"/>
+    <entry name="Tau/Flavor"
+           value="TODO"/>
+    <entry name="Tau/UniversalLoyalty"
+           value="Universal Loyalty"/>
+    <entry name="Tau/UniversalLoyaltyDescription"
+           value="TODO"/>
+    <entry name="Tau/UniversalLoyaltyFlavor"
+           value="TODO"/>
+    <entry name="Tau/UpgradedWeaponry"
+           value="Upgraded Weaponry"/>
+    <entry name="Tau/UpgradedWeaponryDescription"
+           value="TODO"/>
+    <entry name="Tau/UpgradedWeaponryFlavor"
+           value="TODO"/>
 
     <entry name="Tyranids/CityTier2Description"
            value="Increases the tile acquisition radius."/>
