--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -977,6 +977,8 @@
            value="Decreases the armour."/>
     <entry name="Tau/FrequencyLockFlavor"
            value="Seeker missiles are designed to lock onto the remote targeting beacon provided by a markerlight beam and ride the signal all the way to their target, even bypassing and evading intervening terrain in the process.>"/>
+    <entry name="Tau/PointDefenceTargetingRelay"
+           value="Special Peripheral Assault Module"/>
     <entry name="Tau/Prosperity"
            value="Prosperity"/>
     <entry name="Tau/ProsperityDescription"
