--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -501,7 +501,7 @@
     <entry name="Tau/CadreFirebladeFlavor"
            value="As the enemy surges closer, the Fireblade's courage steels his comrades, steadying the firing line and focussing the mind of every Fire Warrior present. Raising his pulse rifle and sighting down its length, the Cadre Fireblade calls out enemy weak spots and optimal firing solutions to his followers, watching the foe press closer with a practised eye. Only at the optimum moment does the Fireblade bark out the order to fire. At the Fireblade's command, the T'au gunline unleashes a storm of fire, an energised squall that tears the enemy to pieces with terrible efficiency."/>
     <entry name="Tau/CityTier2Description"
-           value="Increases the tile acquisition radius."/>
+           value="Increases the tile acquisition radius. Reduces the influence cost of For The Greater Good."/>
     <entry name="Tau/CityTier3Description"
            value="Increases the tile acquisition radius."/>
     <entry name="Tau/ConclaveScreen"
