Disruption Pod + Blast Phasing

--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -512,6 +512,8 @@
            value="TODO"/>
     <entry name="Tau/ConstructionDescription"
            value="Building that constructs new buildings as well as generates ore, research and influence. Grants the ability to purchase population with influence."/>
+    <entry name="Tau/DisruptionPodDescription"
+           value="Increases vehicle ranged damage reduction. Increases the armour penetration of flame and missile weapons."/>
     <entry name="Tau/DroneControllerDescription"
            value="Battlesuit support system that increases the accuracy of adjacent drones. Halves cooldown of drone deployment across most Tau units. Grants Cadre's Gun Drone additional Twin-Linked Pulse Carbine."/>
     <entry name="Tau/EmergencyShields"
