--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -568,6 +568,8 @@
            value="Deploys temporary Tactical Drones."/>
     <entry name="Tau/KauyonDescription"
            value="Metastrategy that increases the ranged damage reduction of allied T'au battlesuit units in the area. Shares cooldown with other metastrategies."/>
+    <entry name="Tau/MarkerlightDescription"
+           value="Reduces the ranged damage reduction of the target enemy non-fortification unit against T'au. Ends after the target enemy unit is attacked by T'au."/>
     <entry name="Tau/RinyonDescription"
            value="Metastrategy that increases the accuracy of allied T'au battlesuit units in the area against enemy units adjacent to other allied units. Shares cooldown with other metastrategies."/>
     <entry name="Tau/SenseOfStoneDescription"
