--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -104,6 +104,10 @@
            value="Draconian Disciplinarian"/>
     <entry name="AstraMilitarum/DraconianDisciplinarianDescription"
            value="Decreases the morale loss."/>
+    <entry name="AstraMilitarum/Gunner"
+           value="Gunner"/>
+    <entry name="AstraMilitarum/GunnerDescription"
+           value="Increases the accuracy of ranged attack against enemy units adjacent to Tempestus Scion or Bullgryn."/>
     <entry name="AstraMilitarum/ImperialStrongpointDamageReduction1"
            value="<string name='Traits/SpaceMarines/FortressOfRedemptionDamageReduction1'/>"/>
     <entry name="AstraMilitarum/ImperialStrongpointDamageReduction1Description"
@@ -150,10 +154,18 @@
            value="Prosperity"/>
     <entry name="AstraMilitarum/ProsperityDescription"
            value="Increases city growth"/>
+    <entry name="AstraMilitarum/SeniorOfficerBullgrynEnemy"
+           value="Senior Officer"/>
+    <entry name="AstraMilitarum/SeniorOfficerBullgrynEnemyDescription"
+           value="Increases the accuracy of ranged attack of Basilisks and Hydras against this unit."/>
     <entry name="AstraMilitarum/SeniorOfficerTempestus"
            value="Senior Officer"/>
     <entry name="AstraMilitarum/SeniorOfficerTempestusDescription"
            value="Increases the accuracy."/>
+    <entry name="AstraMilitarum/SeniorOfficerTempestusEnemy"
+           value="Senior Officer"/>
+    <entry name="AstraMilitarum/SeniorOfficerTempestusEnemyDescription"
+           value="Increases the accuracy of ranged attack of Basilisks and Hydras against this unit."/>
     <entry name="AstraMilitarum/SeniorOfficerValkyrie"
            value="Senior Officer"/>
     <entry name="AstraMilitarum/SeniorOfficerValkyrieDescription"
