--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -803,6 +803,12 @@
     <entry name="SistersOfBattle/VerseOfHolyPietyFlavor"
            value="Pray is stronger than any sword. As the sanctified words of the Order’s holy tenets are roared across the battlefield, the devout are infused with the Emperor’s blessings."/>
 
+    <entry name="SmallBlast"
+           value="Small Blast"/>
+    <entry name="SmallBlastDescription"
+           value="Hits additional group member of the target unit."/>
+    <entry name="SmallBlastFlavor"
+           value="<string name='Weapons/BlastFlavor'/>"/>
     <entry name="SmallBlind"
            value="Blind"/>
     <entry name="SmallBlindDescription"
