--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -971,6 +971,8 @@
            value="Increases ranged attacks."/>
     <entry name="Tau/BreakComposureFlavor"
            value="Though not physically impressive, the T’au can inculcate fear in their enemies through subtler means—by harrying them so that they can’t focus, by surrounding them, by forcing them down tactical paths that only lead to repeated failure. Sometimes you don’t need to even touch an enemy to defeat them."/>
+    <entry name="Tau/DroneControllerDescription"
+           value="Increases the accuracy."/>
     <entry name="Tau/FrequencyLock"
            value="Frequency Lock"/>
     <entry name="Tau/FrequencyLockDescription"
