--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -1003,6 +1003,8 @@
            value="Increases the accuracy and the attacks."/>
     <entry name="Tau/ReactiveThrustSystemFlavor"
            value="Angled micro-thrusters integrated into battlesuit plating allows their pilots to trigger a sudden burst of speed for interdiction assaults.>"/>
+    <entry name="Tau/SupportingFireDescription"
+           value="Increases overwatch attacks."/>
     <entry name="Tau/VolleyFireDescription"
            value="Increases overwatch attacks."/>
     <entry name="Tau/VolleyFireFlavor"
