--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -577,9 +577,7 @@
     <entry name="Tau/UpgradedWeaponry"
            value="Upgraded Weaponry"/>
     <entry name="Tau/UpgradedWeaponryDescription"
-           value="TODO"/>
-    <entry name="Tau/UpgradedWeaponryFlavor"
-           value="TODO"/>
+           value="Grants Piranhas additional fusion blaster. Grants Devilfish additional burst cannon."/>
 
     <entry name="Tyranids/CityTier2Description"
            value="Increases the tile acquisition radius."/>
