--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -1013,6 +1013,18 @@
            value="Angled micro-thrusters integrated into battlesuit plating allows their pilots to trigger a sudden burst of speed for interdiction assaults.>"/>
     <entry name="Tau/SupportingFireDescription"
            value="Increases overwatch attacks."/>
+    <entry name="Tau/TargetAcquired"
+           value="Target Acquired"/>
+    <entry name="Tau/TargetAcquiredDescription"
+           value="Reduces the ranged damage reduction of the unit against T'au. Ends after the unit is attacked by T'au."/>
+    <entry name="Tau/TargetAcquiredFlavor"
+           value="No other race is as committed to working together as the T’au, and the Markerlight is an excellent example of this. It’s a handheld targeting laser that is networked into the T’au’s information system, allowing for pinpoint strikes by other T’au forces."/>
+    <entry name="Tau/TargetAcquiredCadre"
+           value="Target Acquired"/>
+    <entry name="Tau/TargetAcquiredCadreDescription"
+           value="Increases the ranged accuracy of T'au against the unit. Reduces the ranged damage reduction of the unit against T'au. Ends after the unit is attacked by T'au."/>
+    <entry name="Tau/TargetAcquiredCadreFlavor"
+           value="No other race is as committed to working together as the T’au, and the Markerlight is an excellent example of this. It’s a handheld targeting laser that is networked into the T’au’s information system, allowing for pinpoint strikes by other T’au forces."/>
     <entry name="Tau/TotalAssimilation"
            value="Total Assimilation"/>
     <entry name="Tau/TotalAssimilationDescription"
