--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -1020,7 +1020,7 @@
     <entry name="Tau/TargetAcquiredFlavor"
            value="No other race is as committed to working together as the T’au, and the Markerlight is an excellent example of this. It’s a handheld targeting laser that is networked into the T’au’s information system, allowing for pinpoint strikes by other T’au forces."/>
     <entry name="Tau/TargetAcquiredCadre"
-           value="Target Acquired"/>
+           value="Target Sighted"/>
     <entry name="Tau/TargetAcquiredCadreDescription"
            value="Increases the ranged accuracy of T'au against the unit. Reduces the ranged damage reduction of the unit against T'au. Ends after the unit is attacked by T'au."/>
     <entry name="Tau/TargetAcquiredCadreFlavor"
