--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -516,6 +516,12 @@
            value="Increases vehicle ranged damage reduction. Increases the armour penetration of flame and missile weapons."/>
     <entry name="Tau/DroneControllerDescription"
            value="Halves cooldown of drone deployment across most Tau units. Increases the accuracy of drone units."/>
+    <entry name="Tau/EMPGrenade"
+           value="Smoke Grenade"/>
+    <entry name="Tau/EMPGrenadeDescription"
+           value="Grants Fire Warriors and Pathfinders the ability to throw smoke screen grenades."/>
+    <entry name="Tau/EMPGrenadeFlavor"
+           value="<string name='Weapons/EMPGrenadeFlavor'/>"/>
     <entry name="Tau/EmergencyShields"
            value="Emergency Shields"/>
     <entry name="Tau/EmergencyShieldsDescription"
